Fix sidebar auto-close on mobile, fix background colour of hamburger button, fix sizing on login form, and more

--- a/components/Layout/sidebarlogo.module.css
+++ b/components/Layout/sidebarlogo.module.css
@@ -6,7 +6,7 @@
 
 .logo {
   position: relative;
-  margin: 50px 0 0 20px;
+  margin: 70px 0 0 20px;
 }
 
 .logo svg {
