--- a/components/MovieGrid/movie_grid.module.css
+++ b/components/MovieGrid/movie_grid.module.css
@@ -1,6 +1,6 @@
 .heading {
   color: white;
-  padding: 10px 0px 40px 100px;
+  padding: 10px 0px 40px 80px;
   font-size: 3rem;
 }
 
@@ -14,8 +14,11 @@
   margin: 0 80px;
 }
 
-/* @media (max-width: 450px) {
+@media (max-width: 600px) {
   .grid {
-    margin-left: 70px;
+    margin: 0 20px;
   }
-} */
+  .heading {
+    padding: 10px 0px 40px 25px;
+  }
+}
