--- a/components/Sidebar/sidebar.module.css
+++ b/components/Sidebar/sidebar.module.css
@@ -4,7 +4,7 @@
   background-color: inherit;
   border-radius: 50%;
   padding: 10px;
-  margin: 30px 0 0 15px;
+  margin: 60px 0 0 10px;
   color: #f25d2a;
   cursor: pointer;
   border: none;
@@ -22,10 +22,6 @@
 
 .sidebarContainer {
   padding-top: 100px;
-}
-.makePink {
-  background-color: pink;
-  color: pink;
 }
 
 .sidebarLink {
